--- a/01_Java/022_Spring/springsample/src/main/resource/log4j.properties
+++ b/01_Java/022_Spring/springsample/src/main/resource/log4j.properties
@@ -6,7 +6,7 @@ log4j.appender.STDOUT.layout=org.apache.log4j.PatternLayout
 log4j.appender.STDOUT.layout.ConversionPattern=%d [%t] %-5p %c#%M(%L) - %m%n
 
 log4j.appender.FILE=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.FILE.File=/Users/shiorin/Documents/Yoppiy/yoppyi.log
-log4j.appender.FILE.DatePattern='.'yyyy-MM-dd 
+log4j.appender.FILE.File=C:/Users/PC-User/Documents/sample.log
+log4j.appender.FILE.DatePattern='.'yyyy-MM-dd
 log4j.appender.FILE.layout=org.apache.log4j.PatternLayout
 log4j.appender.FILE.layout.ConversionPattern=%d [%t] %-5p %c#%M(%L) - %m%n
