--- a/01_Java/022_Spring/springsample/src/main/webapp/WEB-INF/web.xml
+++ b/01_Java/022_Spring/springsample/src/main/webapp/WEB-INF/web.xml
@@ -2,14 +2,14 @@
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" version="3.0">
   <display-name>spring-sample</display-name>
   <welcome-file-list>
-    <welcome-file>example.html</welcome-file>
+    <welcome-file>index.jsp</welcome-file>
   </welcome-file-list>
-  
+
     <context-param>
         <param-name>contextConfigLocation</param-name>
         <param-value>classpath:/META-INF/application-config.xml</param-value>
     </context-param>
-    
+
     <listener>
         <listener-class>
             org.springframework.web.context.ContextLoaderListener
